; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/mtrr/extr_main.c_set_mtrr_from_inactive_cpu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/mtrr/extr_main.c_set_mtrr_from_inactive_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.set_mtrr_data = type { i32, i64, i64, i32 }

@mtrr_rendezvous_handler = common dso_local global i32 0, align 4
@cpu_callout_mask = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i64, i32)* @set_mtrr_from_inactive_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_mtrr_from_inactive_cpu(i32 %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.set_mtrr_data, align 8
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = getelementptr inbounds %struct.set_mtrr_data, %struct.set_mtrr_data* %9, i32 0, i32 0
  %11 = load i32, i32* %5, align 4
  store i32 %11, i32* %10, align 8
  %12 = getelementptr inbounds %struct.set_mtrr_data, %struct.set_mtrr_data* %9, i32 0, i32 1
  %13 = load i64, i64* %6, align 8
  store i64 %13, i64* %12, align 8
  %14 = getelementptr inbounds %struct.set_mtrr_data, %struct.set_mtrr_data* %9, i32 0, i32 2
  %15 = load i64, i64* %7, align 8
  store i64 %15, i64* %14, align 8
  %16 = getelementptr inbounds %struct.set_mtrr_data, %struct.set_mtrr_data* %9, i32 0, i32 3
  %17 = load i32, i32* %8, align 4
  store i32 %17, i32* %16, align 8
  %18 = load i32, i32* @mtrr_rendezvous_handler, align 4
  %19 = load i32, i32* @cpu_callout_mask, align 4
  %20 = call i32 @stop_machine_from_inactive_cpu(i32 %18, %struct.set_mtrr_data* %9, i32 %19)
  ret void
}

declare dso_local i32 @stop_machine_from_inactive_cpu(i32, %struct.set_mtrr_data*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
